# sqlite-dist

./: .gitignore  Cargo.toml  NOTES  README.md  dist-workspace.toml
.github/workflows/: release.yml
sample/: .gitignore  Makefile  build.sh  extra_init.py  sqlite-dist.toml  sqlite-sample.c  sqlite-sample.h  sqlite-sample.h.tmpl  test.mjs  test.rb
src/: amalgamation.rs  gem.rs  gh_releases.rs  installer_sh.rs  main.rs  manifest.rs  npm.rs  pip.rs  spec.rs  spm.rs  sqlpkg.rs
