[package]
name = "sqlite-dist"
version = "0.0.1-alpha.8"
edition = "2021"
repository = "https://github.com/asg017/sqlite-dist"


[dependencies]
base16ct = {version="0.2.0", features=["alloc"]}
base64 = "0.21.7"
chrono = "0.4.34"
clap = "4.5.1"
flate2 = "1.0.28"
semver = {version="1.0.22", features = ["serde"]}
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10.8"
tar = "0.4.40"
thiserror = "1.0.57"
toml = "0.8.10"
ureq = "2.9.6"
zip = "0.6.6"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.11.1"
installers = []
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
ci = ["github"]
pr-run-mode = "plan"
